--- a/client/dev/partials/indicators/list.html
+++ b/client/dev/partials/indicators/list.html
@@ -3,7 +3,7 @@
 	<li class="active" translate="shared.list"></li>
 </ol>
 
-<div class="form-horizontal well well-sm">
+<div class="form-horizontal">
 	<div class="form-group">
 		<label class="col-sm-1" for="sort-input" translate="indicator.order_by"></label>
 		<div class="col-sm-3">
@@ -17,7 +17,7 @@
 	<div class="form-group">
 		<label for="search-input" class="col-sm-1" translate="indicator.search"></label>
 		<div class="col-sm-3">
-			<input id="search-input" type="text" ng-model="searchField" class="form-control input-sm" />
+			<input id="search-input" type="text" ng-model="searchField" class="form-control input-sm" placeholder="{{'indicator.search_ph'|translate}}"/>
 		</div>
 	</div>
 </div>
