--- a/client/dev/partials/projects/logical-frame-indicator-selector.html
+++ b/client/dev/partials/projects/logical-frame-indicator-selector.html
@@ -54,7 +54,7 @@
 		<div class="form-group">
 			<label for="search-input" class="col-sm-2" translate="indicator.search"></label>
 			<div class="col-sm-10">
-				<input id="search-input" type="text" ng-model="searchField" class="form-control input-sm" />
+				<input id="search-input" type="text" ng-model="searchField" class="form-control input-sm" placeholder="{{'indicator.search_ph'|translate}}" />
 			</div>
 		</div>
 	</div>
