--- a/client/dev/partials/projects/reporting-analysis.html
+++ b/client/dev/partials/projects/reporting-analysis.html
@@ -1,7 +1,7 @@
 <ol class="breadcrumb">
 	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
-	<li class="active" translate="shared.reporting_analysis"></li>
+	<li><a ui-sref="main.project.logical_frame" ng-bind="project.name"></a></li>
+	<li><a ui-sref="main.project.reporting_analysis_list" translate="shared.reporting_analysis"></a></li>
 	<li class="active" ng-bind="report.date|amDateFormat:'YYYY-MM-DD'"></li>
 	<li class="active" ng-bind="report.name"></li>
 </ol>
@@ -13,7 +13,7 @@
 		<div class="col-sm-11" acl-has-project-role="owner" acl-fallback="report.name">
 			<input id="input-name"
 				   type="text"
-				   class="form-control"
+				   class="form-control input-sm"
 				   name="name"
 				   ng-model="report.name"
 				   placeholder="{{'project.report_name_ph'|translate}}"
@@ -35,19 +35,64 @@
 				   is-open="reportDateOpen"
 				   ng-click = "reportDateOpen = true"
 				   required
-				   class="form-control" />
+				   class="form-control input-sm" />
 
 			<p class="help-block" ng-if="reportForm.begin.$error.required" translate="form.mandatory"></p>
 		</div>
 	</div>
 
-	
+	<div class="form-group">
+		<label for="input-analysis" class="col-sm-1 control-label" translate="project.analysis"></label>
+		<div class="col-sm-11" acl-has-project-role="owner">
+			<div ng-repeat="element in report.elements">
+				<div class="show-on-hover">
+					<button class="btn btn-primary btn-sm" ng-click="addReportGrid($index)">
+						<i class="fa fa-table"></i>
+						<span translate="project.analysis_insert_data"></span>
+					</button>
+					<button class="btn btn-primary btn-sm" ng-click="addReportText($index)">
+						<i class="fa fa-pencil"></i>
+						<span translate="project.analysis_insert_text"></span>
+					</button>
+					
+					<div class="pull-right">
+						<button class="btn btn-default btn-sm" ng-click="move($index, -1)" ng-if="!$first">
+							<i class="fa fa-caret-square-o-up"></i>
+							<span translate="project.analysis_up_next"></span>
+						</button>
+						
+						<button class="btn btn-default btn-sm" ng-click="move($index, 1)" ng-if="!$last">
+							<i class="fa fa-caret-square-o-down"></i>
+							<span translate="project.analysis_down_next"></span>
+						</button>
+						
+						<button class="btn btn-danger btn-sm" ng-click="remove($index)">
+							<i class="fa fa-times"></i>
+							<span translate="project.analysis_delete_next"></span>
+						</button>
+					</div>
+				</div>
 
-	<div text-angular ng-model="element.comment" ta-toolbar="[['h1','h2','h3','h4','p','pre','quote'],['bold','italics','underline','strikeThrough','ul','ol','undo','redo','clear'],['justifyLeft','justifyCenter','justifyRight','indent','outdent']]"></div>
-	
-	<button ng-click="addReportGrid()">Ajouter un tableau</button>
-	<button ng-click="addReportGraph()">Ajouter un graphique</button>
-	<button ng-click="addReportText()">Ajouter une zone de texte</button>
+				<div ng-if="element.type === 'data'">
+					<report-preview data="element"></report-preview>
+				</div>
+				<div ng-if="element.type === 'text'">
+					<text-angular ng-model="element.content" ta-toolbar="[['h1','h2','h3','h4','p','pre','quote'],['bold','italics','underline','strikeThrough','ul','ol','undo','redo','clear'],['justifyLeft','justifyCenter','justifyRight','indent','outdent']]"></text-angular>
+				</div>
+			</div>
+
+			<div style="margin: 10px 0">
+				<button class="btn btn-primary btn-sm" ng-click="addReportGrid(report.elements.length)">
+					<i class="fa fa-table"></i>
+					<span translate="project.analysis_insert_data"></span>
+				</button>
+				<button class="btn btn-primary btn-sm" ng-click="addReportText(report.elements.length)">
+					<i class="fa fa-pencil"></i>
+					<span translate="project.analysis_insert_text"></span>
+				</button>
+			</div>
+		</div>
+	</div>
 
 	<div acl-has-project-role="owner">
 		<button ng-disabled="reportForm.$invalid || isUnchanged()" class="btn btn-primary" ng-click="save()">
@@ -59,8 +104,6 @@
 			<i class="fa fa-undo"></i>
 			<span translate="shared.remove_changes"></span>
 		</button>
-
 	</div>
+
 </form>
-
-
