--- a/client/dev/partials/projects/logical-frame-indicator-selector.html
+++ b/client/dev/partials/projects/logical-frame-indicator-selector.html
@@ -1,12 +1,12 @@
 <script type="text/ng-template" id="indicator_tree.html">
-	<div class="indicator-level-2" ng-repeat="type in theme.children" ng-if="theme.open||filter">
+	<div class="indicator-level-2" ng-repeat="type in theme.children" ng-if="theme.open">
 		<div class="indicator-header" ng-click="type.open=!type.open">
-			<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !(type.open||filter), 'fa-minus-circle': type.open||filter}"></i>
+			<i class="fa" ng-class="{'fa-plus-circle':!type.open,'fa-minus-circle':type.open}"></i>
 			{{(type.name || 'indicator.no_type')|translate}}
-			<span class="badge pull-right" style="margin-right: 10px;">{{type.children.length}}</span>
+			<span class="badge pull-right" ng-bind="type.children.length"></span>
 		</div>
 
-		<div class="indicator-level-3" ng-repeat="indicator in type.children | orderBy:orderField" ng-if="type.open||filter">
+		<div class="indicator-level-3" ng-repeat="indicator in type.children" ng-if="type.open">
 			<span class="pull-right">
 				{{indicator.__mainUsage}} <i class="fa fa-building-o"></i>
 				{{indicator.__inputUsage}} <i class="fa fa-pencil-square-o"></i>
@@ -60,11 +60,11 @@
 	</div>
 
 	<div ng-if="showAllIndicators || project.themes.length == 0">
-		<div class="indicator-level-1" ng-repeat="theme in hierarchy">
+		<div class="indicator-level-1" ng-repeat="theme in hierarchy|hierarchyFilter:searchField">
 			<div class="indicator-header" ng-click="theme.open=!theme.open">
-				<i class="fa" ng-class="{'fa-plus-circle': !(theme.open||filter), 'fa-minus-circle': theme.open||filter}"></i>
+				<i class="fa" ng-class="{'fa-plus-circle': !theme.open,'fa-minus-circle':theme.open}"></i>
 				{{(theme.name || 'indicator.no_theme')|translate}}
-				<span class="badge pull-right" style="margin-right: 10px;">{{theme.children.length}}</span>
+				<span class="badge pull-right" ng-bind="theme.children.length"></span>
 			</div>
 
 			<div ng-include="'indicator_tree.html'"></div>
@@ -75,17 +75,17 @@
 		<div ng-if="project.themes.length == 1">
 			<div style="margin-left: -40px"
 				ng-include="'indicator_tree.html'"
-				ng-repeat="theme in hierarchy"
+				ng-repeat="theme in hierarchy|hierarchyFilter:searchField"
 				ng-if="theme._id === project.themes[0]"
  				ng-init="theme.open = true"></div>
 		</div>
 
 		<div ng-if="project.themes.length != 1">
-			<div class="indicator-level-1" ng-repeat="theme in hierarchy" ng-if="project.themes.indexOf(theme._id) !== -1">
+			<div class="indicator-level-1" ng-repeat="theme in hierarchy|hierarchyFilter:searchField" ng-if="project.themes.indexOf(theme._id) !== -1">
 				<div class="indicator-header" ng-click="theme.open=!theme.open">
-					<i class="fa" ng-class="{'fa-plus-circle': !(theme.open||filter), 'fa-minus-circle': theme.open||filter}"></i>
+					<i class="fa" ng-class="{'fa-plus-circle':!theme.open,'fa-minus-circle':theme.open}"></i>
 					{{(theme.name || 'indicator.no_theme')|translate}}
-					<span class="badge pull-right" style="margin-right: 10px;">{{theme.children.length}}</span>
+					<span class="badge pull-right" ng-bind="theme.children.length"></span>
 				</div>
 
 				<div ng-include="'indicator_tree.html'"></div>
