--- a/client/dev/partials/projects/input.html
+++ b/client/dev/partials/projects/input.html
@@ -11,45 +11,45 @@
 	<div class="panel-heading">
 		<div class="row">
 			<div class="col-sm-4">
-				<i class="fa fa-pencil" ng-if="indicator.type === 'input'"></i>
-				<i class="fa fa-calculator" ng-if="indicator.type.substring(0, 'compute'.length) === 'compute'" tooltip="{{indicator.expression}}"></i>
-				<i class="fa fa-link" ng-if="indicator.type.substring(0, 'link'.length) === 'link'"></i>
+				<i class="fa fa-pencil" ng-if="field.type === 'input'"></i>
+				<i class="fa fa-calculator" ng-if="field.type.substring(0, 'compute'.length) === 'compute'" tooltip="{{field.expression}}"></i>
+				<i class="fa fa-link" ng-if="field.type.substring(0, 'link'.length) === 'link'"></i>
 
 				<span ng-if="!key"><span translate="shared.indicator"></span>: </span>
 				<span ng-if="key"><span translate="indicator.parameter"></span> <strong>"{{key}}"</strong>: </span>
-				{{indicator.name}}
+				{{field.name}}
 			</div>
 
-			<div class="col-sm-8" acl-has-project-role="input" acl-fallback="currentInput.values[indicator.model]">
+			<div class="col-sm-8" acl-has-project-role="input" acl-fallback="currentInput.values[field.model]">
 				<div class="input-group" ng-if="!key">
 					<div class="input-group-addon">
-						<i class="fa fa-circle" ng-style="{color:status[indicator.id]}" tooltip-html-unsafe="{{'project.status_' + status[indicator.id]|translate}}"></i>
+						<i class="fa fa-circle" input-status></i>
 					</div>
 					<input type="number"
 						   class="form-control input-sm"
-						   ng-model="currentInput.values[indicator.model]"
-						   placeholder="Saisie précédente: {{previousInput.values[indicator.model] || '?'}}"
-						   ng-disabled="indicator.type !== 'input'" />
+						   ng-model="currentInput.values[field.model]"
+						   placeholder="Saisie précédente: {{previousInput.values[field.model] || '?'}}"
+						   ng-disabled="field.type !== 'input'" />
 				</div>
 
 				<input type="number"
 					   class="form-control input-sm"
-					   ng-disabled="indicator.type !== 'input'"
+					   ng-disabled="field.type !== 'input'"
 					   ng-if="key"
-					   ng-model="currentInput.values[indicator.model]"
-					   placeholder="Saisie précédente: {{previousInput.values[indicator.model] || '?'}}" />
+					   ng-model="currentInput.values[field.model]"
+					   placeholder="Saisie précédente: {{previousInput.values[field.model] || '?'}}" />
 
 			</div>
 		</div>
 	</div>
-	<div class="panel-body" ng-if="indicator.type.substring(0, 'compute'.length) === 'compute'">
+	<div class="panel-body" ng-if="field.type.substring(0, 'compute'.length) === 'compute'">
 		<div class="panel panel-info"
-			 ng-repeat="(key, indicator) in indicator.parameters"
+			 ng-repeat="(key, field) in field.parameters"
 			 ng-include="'form-sub-3.html'"></div>
 	</div>
 </script>
 
-<div class="panel panel-primary" ng-repeat="indicator in form.fields" ng-include="'form-sub-3.html'"></div>
+<div class="panel panel-primary" ng-repeat="field in form.fields" ng-include="'form-sub-3.html'"></div>
 
 <div acl-has-project-role="input">
 	<button class="btn btn-default" ng-click="save()">
