Improve forms and implement collecting indicators on the project himself.

--- a/client/dev/css/app.css
+++ b/client/dev/css/app.css
@@ -154,6 +154,10 @@ textarea {
   transition-delay: .25s
 }
 
+report-preview .table {
+  margin-bottom: 0;
+}
+
 
 .print { display: none;}
 .main-content { padding-top: 70px; }
