--- a/client/dev/partials/menu.html
+++ b/client/dev/partials/menu.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only" translate>menu.toggle_nav</span>
+				<span class="sr-only" translate="menu.toggle_nav"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -14,20 +14,20 @@
 				<li ng-class="{active: $state.includes('main.projects') || $state.includes('main.project')}">
 					<a ui-sref="main.projects">
 						<i class="fa fa-fw fa-building"></i>
-						<span translate>shared.projects</span>
+						<span translate="shared.projects"></span>
 					</a>
 				</li>
 				<li ng-class="{active: $state.includes('main.indicators') || $state.includes('main.indicator')}">
 					<a ui-sref="main.indicators">
 						<i class="fa fa-fw fa-book"></i>
-						<span translate>shared.indicators_catalog</span>
+						<span translate="shared.indicators_catalog"></span>
 					</a>
 				</li>
 
 				<li ng-class="{active: $state.includes('main.admin')}" acl-has-role="_admin">
 					<a ui-sref="main.admin.users">
 						<i class="fa fa-fw fa-cogs"></i>
-						<span translate>shared.settings</span>
+						<span translate="shared.settings"></span>
 					</a>
 				</li>
 			</ul>
@@ -40,9 +40,9 @@
 					</a>
 
 					<ul class="dropdown-menu" role="menu">
-						<li><a ng-click="changeLanguage('fr')" ng-if="language != 'fr'" translate>menu.french</a></li>
-						<li><a ng-click="changeLanguage('en')" ng-if="language != 'en'" translate>menu.english</a></li>
-						<li><a ng-click="changeLanguage('es')" ng-if="language != 'es'" translate>menu.spanish</a></li>
+						<li><a ng-click="changeLanguage('fr')" ng-if="language != 'fr'" translate="menu.french"></a></li>
+						<li><a ng-click="changeLanguage('en')" ng-if="language != 'en'" translate="menu.english"></a></li>
+						<li><a ng-click="changeLanguage('es')" ng-if="language != 'es'" translate="menu.spanish"></a></li>
 					</ul>
 				</li>
 
@@ -56,7 +56,7 @@
 						<li>
 							<a ng-click="logout()">
 								<i class="fa fa-fw fa-arrow-left"></i>
-								<span translate>shared.back_to_intranet</span>
+								<span translate="shared.back_to_intranet"></span>
 							</a>
 						</li>
 					</ul>
