--- a/client/dev/partials/projects/form-edit.html
+++ b/client/dev/partials/projects/form-edit.html
@@ -36,7 +36,7 @@
 
 <ol class="breadcrumb">
 	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
+	<li><a ui-sref="main.project.logical_frame({projectId: project._id})" ng-bind="project.name"></a></li>
 	<li><a ui-sref="main.project.forms({projectId: project._id})" translate="project.input_forms"></a></li>
 	<li class="active">{{form.name}}</li>
 </ol>
@@ -55,7 +55,7 @@
 					   id="input-name"
 					   name="name"
 					   ng-model="form.name"
-					   placeholder="Exemple: Sondage trimestriel"
+					   placeholder="{{'project.form_name_ph'|translate}}"
 					   required />
 				
 				<p class="help-block" ng-if="formForm.name.$error.required" translate="form.mandatory"></p>
@@ -73,17 +73,27 @@
 
 		<div class="form-group" show-errors>
 			<label for="periodicity-input" class="col-sm-2 control-label" translate="project.periodicity"></label>
-			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="'project.'+form.periodicity+'ly'|translate">
+			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="'project.periodicity.'+form.periodicity|translate">
 				<select class="form-control" name="periodicity" id="periodicity-input" ng-model="form.periodicity">
-					<option value="day" translate="project.daily"></option>
-					<option value="week" translate="project.weekly"></option>
-					<option value="month" translate="project.monthly"></option>
-					<option value="quarter" translate="project.quarterly"></option>
-					<option value="year" translate="project.yearly"></option>
-					<option value="planned" translate="project.planned"></option>
+					<option value="day" translate="project.periodicities.day"></option>
+					<option value="week" translate="project.periodicities.week"></option>
+					<option value="month" translate="project.periodicities.month"></option>
+					<option value="quarter" translate="project.periodicities.quarter"></option>
+					<option value="year" translate="project.periodicities.year"></option>
+					<option value="planned" translate="project.periodicities.planned"></option>
 				</select>
 			</div>
 		</div>
+
+		<div class="form-group" show-errors>
+			<label for="collect-input" class="col-sm-2 control-label" translate="project.collect"></label>
+			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="'project.'+form.collect|translate">
+				<select class="form-control" name="collect" id="collect-input" ng-model="form.collect">
+					<option value="entity" translate="project.collects.entity"></option>
+					<option value="project" translate="project.collects.project"></option>
+				</select>
+			</div>
+		</div>		
 
 		<div class="form-group" show-errors>
 			<label for="periodicity" class="col-sm-2 control-label" translate="shared.begin"></label>
@@ -108,7 +118,7 @@
 
 				<p class="form-control-static" acl-lacks-project-role="owner">
 					<span ng-if="form.useProjectStart" translate="project.begin"></span>
-					<span ng-if="!form.useProjectStart">{{form.start | amDateFormat: 'D MMMM YYYY'}}</span>
+					<span ng-if="!form.useProjectStart" ng-bind="form.start | amDateFormat: 'D MMMM YYYY'"></span>
 				</p>
 			</div>
 		</div>
@@ -167,7 +177,7 @@
 
 				<p class="form-control-static" acl-lacks-project-role="owner">
 					<span ng-if="form.useProjectEnd" translate="project.end"></span>
-					<span ng-if="!form.useProjectEnd">{{form.end | amDateFormat: 'D MMMM YYYY'}}</span>
+					<span ng-if="!form.useProjectEnd" ng-bind="form.end | amDateFormat: 'D MMMM YYYY'"></span>
 				</p>
 			</div>
 		</div>
@@ -186,9 +196,7 @@
 					ng-options="i._id as i.name for i in addableIndicators">
 			</select>
 			<span class="input-group-btn">
-				<button class="btn btn-default" ng-click="add()">
-					Ajouter un nouvel indicateur au formulaire
-				</button>
+				<button class="btn btn-default" ng-click="add()" translate="project.add_new_indicator_to_form"></button>
 			</span>
 		</div>
 
